--- a/brief_soundboard/package.json
+++ b/brief_soundboard/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cssnano": "^4.1.10"
+    "cssnano": "^4.1.10",
+    "parcel": "^2.0.0-beta.2"
   }
 }
